syntax enhancements due to new Java versions (#16)